fix spacing

--- a/src/components/Excerpt/Excerpt.module.scss
+++ b/src/components/Excerpt/Excerpt.module.scss
@@ -12,6 +12,7 @@
 .image-wrap {
   width: 140px;
   overflow: hidden;
+  margin-bottom: 1em;
 
   @media screen and (min-width: 1024px) {
     width: auto;
