--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -97,10 +97,11 @@ p {
 .content-width {
   display: grid;
   grid-template-rows: auto;
-  gap: 4em;
+  row-gap: 6em;
+  padding: 6em 0;
 
   @media screen and (min-width: 1024px) {
-    margin: 4em 0;
+    // margin: 4em 0;
   }
 
   &--container {
